2008-09-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Cleanup.

2008-09-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (mt_main_generate_button_event): Fix typo that
	caused double clicks not to work.
	(mt_main_do_dwell_click)(dwell_timer_finished): Improve drag click
	handling. (mt_main_generate_motion_event): Add error trap

2008-09-06  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.glade: Mark modifier labels
	for translation.

	Patch by Milo Casagrande. Fixes bug #551133.

2008-09-01  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.92

2008-09-01  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* NEWS: Prepare 2.23.91 release.

2008-08-28  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-cursor-manager.h: Fix copy and paste error.

2008-08-28  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Fix regression with drag clicks.

2008-08-28  Gerd Kohlberger  <gerdk@svn.gnome.org>

	Fix secondary clicks on the "Window List" applet.

	* src/mt-main.c:(mt_main_generate_motion_event): Flush connection.
	* src/mt-accessible.c:(mt_accessible_at_point):
	Don't skip inactive objects.

2008-08-27  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Change cursor on all root windows.

2008-08-27  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-timer.c: Minor cleanup.

2008-08-24  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-listener.c: I_() macro was a bad idea.
	* po/POTFILES.skip: Remove mt-listener.c again.

2008-08-24  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Add multiscreen support and generate events
	with XTest instead of AT-SPI.
	* src/mt-main.h: Add variables.
	* src/mt-ctw.c: (mt_ctw_update_visibility): Map click-type window
	on the current screen.
	* configure.ac: Add xtst check.

2008-08-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:(cursor_overlay_time):
	* src/mt-ctw.c:
	* src/mt-ctw.h:
